@@ -1,3 +1,10 @@
+2010-05-05  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Add abstraction: prepend
+
+	* b-esds.h (prepend): New func decl.
+	* b-esds.c (prepend): New func.
+
 2010-05-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Use ‘struct u_symdef’ more.
